<resources>
    <string name="app_name">Arohan</string>
    <string name="button_send">SEND</string>
    <string name="registered">SUCCESSFULLY REGISTRATION!!!;)</string>
    <string name="err_msg_name">INVALID NAME</string>
    <string name="err_msg_email">INVALID EMAIL</string>
    <string name="err_msg_password">INVALID PASSWORD</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="edit_message">Enter the message</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">password</string>
    <string name="email">Enter E-mail Address</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
</resources>
